overflow fixed

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -53,7 +53,6 @@
   background-size: cover;
   background-position: center;
   background-image: url(../img/hero/mainscreen1x.png);
-  overflow: hidden;
 }
 
 .bottom-hero {
@@ -102,8 +101,8 @@
   .main-screen {
     z-index: -10;
     top: -231px;
-    left: 30px;
-    width: 1693px;
+    left: 100px;
+
     height: 1220px;
     background-repeat: no-repeat;
     background-size: contain;
